@@ -1,3 +1,11 @@
+Next 1.4 release
+================
+
+- ``pyramid.testing.DummyResource`` didn't define ``__bool__``, so code under
+   Python 3 would use ``__len__`` to find truthiness; this usually caused an
+   instance of DummyResource to be "falsy" instead of "truthy".  See
+   https://github.com/Pylons/pyramid/pull/1032
+
 1.4.2 (2013-05-21)
 ==================
 
